<resources>
    <string name="app_name">My Application2</string>
    <string name="title_activity_saja2">saja2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_mainmenu">Mainmenu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_optionmenu">Optionmenu</string>
    <string name="skills">Skills</string>
    <string name="microsoft_word">Microsoft Word</string>
    <string name="power_point">Power Point</string>
    <string name="premier_pro">Premier Pro</string>
    <string name="android_studio">Android Studio</string>
    <string name="micosoft_excel">Micosoft Excel</string>
    <string name="todo">TODO</string>
</resources>